# opencv-bazel

./: .gitignore  BUILD  MODULE.bazel  MODULE.expose_all.patch  MODULE.opencv_4_10_0_module.patch  README.md  WORKSPACE  opencv_headers.bzl
devtools/: BUILD  bzl_export_files.cc  generate_opencv_headers.cc  generate_opencv_headers.sh  generate_opencv_outputs.sh
examples/bzlmod/: .gitignore  BUILD  MODULE.bazel  README.md  test.cc
examples/local/: BUILD  test.cc
examples/simple/: BUILD  main.cc
private/: BUILD  opencv_headers.bzl  opencv_libraries.bzl
private/opencv_cmake/: BUILD
src/: BUILD  list_headers.cc  opencv_headers.bzl
