"Module exposing OpenCV via Bazel."

module(name = "opencv-bazel")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "abseil-cpp", version = "20240116.2", dev_dependency = True)

bazel_dep(name = "rules_foreign_cc", version = "0.12.0")

http_archive(
    name = "opencv_4_10_0",
    url = "https://github.com/opencv/opencv/archive/refs/tags/4.10.0.zip",
    integrity = "sha256-OBC8orHRxXKRLfCsOIgSY0Hzdi39KOkQaMgF+2VtDlE=",
    strip_prefix = "opencv-4.10.0",
    patches = [
        "//:MODULE.expose_all.patch",
        "//:MODULE.opencv_4_10_0_module.patch",
    ],
)
